<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Balloon Pop</string>
    <string name="action_exit">Exit</string>
    <string name="action_discover">Connect to Bluetooth Device</string>
    <string name="discoverable">Enable Bluetooth Discoverability</string>
    <string name="action_disconnect">Disconnect Bluetooth Device</string>
    <string name="enable">Enable Bluetooth</string>   
    
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
  
    <!--  Bluetooth -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting</string>
    <string name="title_connected">connected</string>
    <string name="title_not_connected">not connected</string>    
    
</resources>